<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="false"
    android:focusableInTouchMode="true"
    android:background="#E7F8FA"
    tools:context=".LoginActivity">

    <View
        android:id="@+id/view_blank"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/ic_bg_topheader"
        android:clickable="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_circle"
        android:padding="10dp"
        android:src="@drawable/main_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/credentials_card"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_logo">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:visibility="visible"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="25dp"
                    android:text="@string/sign_in"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="50dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:endIconMode="clear_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:drawablePadding="10dp"
                        android:ems="10"
                        android:hint="@string/enter_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/Black"
                        android:textColorHint="#2C2424" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    app:boxCornerRadiusBottomEnd="12dp"
                    app:boxCornerRadiusBottomStart="12dp"
                    app:boxCornerRadiusTopEnd="12dp"
                    app:boxCornerRadiusTopStart="12dp"
                    app:endIconMode="clear_text">

                    <MultiAutoCompleteTextView
                        android:id="@+id/loginstudentDOB"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:drawableStart="@drawable/ic_baseline_security_24"
                        android:drawableLeft="@drawable/ic_baseline_security_24"
                        android:drawablePadding="10dp"
                        android:hint="Enter password"
                        android:maxLines="1"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/Black"
                        android:textColorHint="#8E8282"
                        android:textSize="16sp" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="60dp"
                    android:padding="5dp"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/forget"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forget_password"
                        android:textColor="@color/Blue"
                         />

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/sign_in_up_bg"
        android:text="@string/s_i_g_n_i_n"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/credentials_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/credentials_card">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Don't have an account ?"
            android:textColor="#3636F6" />

        <TextView
            android:id="@+id/signuplink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:text="@string/signup"
            android:textColor="@color/Blue" />

    </LinearLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:padding="10dp"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@id/loginbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        >

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/google_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="40dp"-->
<!--            android:layout_marginRight="10dp"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_marginEnd="10dp" />-->

<!--        <com.facebook.login.widget.LoginButton-->
<!--            android:id="@+id/facebook_button"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="20dp"-->
<!--            android:layout_margin="6dp"-->
<!--            android:layout_toRightOf="@+id/google_button"-->
<!--            android:textSize="18sp"-->
<!--            android:layout_toEndOf="@+id/google_button" />-->
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>